--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
-      <a-marker type="pattern" url="./materials/marker/pattern-marker.patt">
+      <a-marker type="pattern" url="ar-2020-awards/materials/marker/pattern-marker.patt">
         <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red"></a-box>
       </a-marker>
       <a-entity camera></a-entity>
