--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
   </head>
   <body>
     <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
-      <a-marker type="pattern" url="ar-2020-awards/materials/pattern-marker.patt">
-        <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red"></a-box>
+      <a-assets>
+        <a-assets-item id="#uribo" src="ar-2020-awards/materials/tree.glb"></a-assets-item>
+      </a-assets>
+      <a-marker type="pattern" url="../materials/marker/pattern-marker.patt">
+        <a-entity gltf-model="#uribo" scale="0.1 0.1 0.1" animation-mixer></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
