--- a/test/index.html
+++ b/test/index.html
@@ -8,10 +8,15 @@
 <body style="margin : 0px; overflow: hidden">
   <!-- AR.jsのデバックとA-FrameのVRボタンを非表示 -->
   <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
+    <a-assets>
+      <!-- 3Dモデルをプリロード -->
+      <a-asset-item id="uribo" src="tree.glb"></a-asset-item>
+    </a-assets>
     <!-- a-markerのtypeにpatternを設定, 作ったpattファイルをurlにを指定 -->
     <a-marker type="pattern" url="pattern-marker.patt">
+      <a-entity gltf-model="#uribo" scale="0.1 0.1 0.1" animation-mixer></a-entity>
       <!-- 赤い立方体を表示 -->
-      <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red"></a-box>
+      <!-- <a-box position="0 0.5 0" width="0.5" height="0.5" depth="0.5" color="red"></a-box> -->
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
