--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a-assets>
         <a-assets-item id="#uribo" src="ar-2020-awards/materials/tree.glb"></a-assets-item>
       </a-assets>
-      <a-marker type="pattern" url="../materials/marker/pattern-marker.patt">
+      <a-marker type="pattern" url="ar-2020-awards/materials/pattern-marker.patt">
         <a-entity gltf-model="#uribo" scale="0.1 0.1 0.1" animation-mixer></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
