--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
       <a-assets>
-        <a-assets-item id="#uribo" src="ar-2020-awards/materials/tree.glb"></a-assets-item>
+        <a-assets-item id="uribo" src="ar-2020-awards/materials/tree.glb"></a-assets-item>
       </a-assets>
       <a-marker type="pattern" url="ar-2020-awards/materials/pattern-marker.patt">
         <a-entity gltf-model="#uribo" scale="0.1 0.1 0.1" animation-mixer></a-entity>
