--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <base href="/">
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="ar-2020-awards//favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <link rel="shortcut icon" href="/ar-2020-awards/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>トップ</title>
@@ -21,20 +21,16 @@
     <meta name="twitter:description" content="説明">
     <meta name="twitter:image:src" content="https://">
     <meta name="twitter:domain" content="https://">
-    <link rel="stylesheet" href="ar-2020-awards/css/main.css">
-    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <link rel="stylesheet" href="/ar-2020-awards/css/main.css">
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
   </head>
   <body>
     <a-scene embedded arjs="debugUIEnabled: false" vr-mode-ui="enabled: false">
-      <a-assets>
-        <a-assets-item id="uribo" src="ar-2020-awards/materials/tree.glb"></a-assets-item>
-      </a-assets>
-      <a-marker type="pattern" url="ar-2020-awards/materials/pattern-marker.patt">
-        <a-entity gltf-model="#uribo" scale="0.1 0.1 0.1" animation-mixer></a-entity>
-      </a-marker>
-      <a-entity camera></a-entity>
+      <a-box position="5 0 -7" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
     </a-scene>
-    <script src="ar-2020-awards/js/main.js"></script>
+    <script src="/ar-2020-awards/js/main.js"></script>
   </body>
 </html>
